--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,7 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "icon.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "icon.png"
     }
   ],
   "start_url": ".",
