--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "no-loop-func": "off"
+    }
   },
   "browserslist": {
     "production": [
